[tool.poetry]
name = "idex-sdk-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "idex_sdk_python" },
]

[tool.poetry.dependencies]
python = ">3.7.1,<3.10"
pyee = "^9.0.4"
web3 = "^5.30.0"
websockets = "9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
types-requests = "^2.27.30"
python-dotenv = "^0.20.0"
debugpy = "^1.6.2"
pydoc-markdown = {version = "^4.6.3", extras = ["novella"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"

[virtualenvs]
path = ".venv"
