[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "idex-sdk"
version = "1.0.0b2"
description = "IDEX v3 SDK for Python"
license = "MIT"
authors = ["IDEX <support@idex.io>"]
readme = "README.md"
homepage = "https://idex.io/"
repository = "https://github.com/idexio/idex-sdk-python"
documentation = "https://api-docs-v3.idex.io/"
packages = [{ include = "idex_sdk" }]

[tool.poetry.dependencies]
python = ">3.7.1,<3.10"
pyee = "^9.0.4"
web3 = "^5.30.0"
websockets = "9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"
types-requests = "^2.27.30"
python-dotenv = "^0.20.0"
debugpy = "^1.6.2"
pydoc-markdown = { version = "^4.6.3", extras = ["novella"] }

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
include = '\.pyi?$'

[tool.isort]
profile = "black"
